fix: prevent text overflow on smaller screens

--- a/css/pages/tasks.css
+++ b/css/pages/tasks.css
@@ -505,4 +505,10 @@
     .new-task-form {
         width: 80%;
     }
+
+    @media screen and (max-width: 550px) {
+        .list-item {
+            min-height: 22em;
+        }
+    }
 }
